<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="370dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:layout_marginBottom="16dp"
    app:cardElevation="8dp"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="18dp">

        <!-- Testi caregiver -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/caregiver_info"
                android:textColor="#2F4BA0"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/caregiverFullname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_fullname"
                android:textColor="#333"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/caregiverPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_phone_number_str"
                android:textColor="#333"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/caregiverEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_email_str"
                android:textColor="#333"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/authenticated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/caregiver_not_authenticated_str"
                android:textColor="#333"
                android:textSize="15sp"
                android:visibility="gone"/>
        </LinearLayout>

        <!-- Pulsante Modifica -->
        <Button
            android:id="@+id/btnEliminaCaregiver"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_button"
            android:foreground="?attr/selectableItemBackground"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:text="@string/delete_caregiver_str"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>