<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/glass_bg"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <!-- Titolo -->
        <TextView
            android:id="@+id/settingsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/settings_title"
            android:textColor="#2F4BA0"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_gravity="start"/>

        <!-- CARD PROFILO UTENTE -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="18dp">

                <!-- Testi Profilo -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_info"
                        android:textColor="#2F4BA0"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/userFullname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_fullname"
                        android:textColor="#333"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/userPhone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_phone_number_str"
                        android:textColor="#333"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/userEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_email_str"
                        android:textColor="#333"
                        android:textSize="15sp" />
                </LinearLayout>

                <!-- Pulsante Modifica -->
                <Button
                    android:id="@+id/btnModificaProfilo"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/bg_button"
                    android:foreground="?attr/selectableItemBackground"
                    android:paddingLeft="18dp"
                    android:paddingRight="18dp"
                    android:text="@string/modify_str"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <!-- CARD PROFILO CAREGIVER -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="18dp">

                <!-- Testi caregiver -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/caregiver_info"
                        android:textColor="#2F4BA0"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/caregiverFullname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_fullname"
                        android:textColor="#333"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/caregiverPhone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_phone_number_str"
                        android:textColor="#333"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/caregiverEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_email_str"
                        android:textColor="#333"
                        android:textSize="15sp" />
                </LinearLayout>

                <!-- Pulsante Modifica -->
                <Button
                    android:id="@+id/btnModificaCaregiver"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/bg_button"
                    android:foreground="?attr/selectableItemBackground"
                    android:paddingLeft="18dp"
                    android:paddingRight="18dp"
                    android:text="@string/modify_str"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <!-- DELETE USER BUTTON -->
        <Button
            android:id="@+id/btnEliminaProfilo"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_button"
            android:foreground="?attr/selectableItemBackground"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:text="@string/delete_user_str"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />

        <!-- LOGOUT BUTTON -->
        <Button
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_button"
            android:foreground="?attr/selectableItemBackground"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:text="@string/logout_str"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />

    </LinearLayout>

</FrameLayout>
